--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -528,6 +528,11 @@ body {
   height: 1.125rem;
 }
 
+#upload-btn .icon-svg {
+  width: 1.125rem;
+  height: 1.125rem;
+}
+
 #server-favorites-btn .icon-svg {
   width: 1.125rem;
   height: 1.125rem;
